--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class></Main-Class>
+                                        <Main-Class>ua.com.blaclion.frames.MainFrame</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
